# speedctrl-fw

./: .clang-format  CMakeLists.txt  program.sh
cmake/: cross_compile.cmake
link/: flash.ld
script/: gen_nco_lut.py
src/: ac_synth.c  ac_synth.h  main.c  nco.c  nco.h  nco_lut.h  stm32f0xx_hal_conf.h  stm32f0xx_it.c  syscalls.c  system_stm32f0xx.c
test/: CMakeLists.txt
test/src/: test_ac_synth.c  test_nco.c
